# cuda-traffic-analytics-pipeline

./: .gitignore  README.md  README_cuda_image_processing_pipeline.md  README_pc_cuda_handoff.md  pyproject.toml
docs/: architecture.md  benchmarking.md  project_phases.md
scripts/: benchmark_cpu.py  benchmark_gpu.py  generate_sample_data.py  prepare_phase7_demo_assets.py  prepare_portfolio_assets.py  run_lane_detection.py  run_traffic_analytics.py  validate_cpu_vs_gpu.py
src/cuda_image_processing/: __init__.py  advanced_lane_detection.py  benchmarking.py  gpu_numba.py  gpu_pipeline.py  io_utils.py  lane_detection.py  object_detection.py  perspective.py  portfolio.py  realtime_pipeline.py  sample_data.py
src/cuda_image_processing.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_cpu_pipeline.py
