[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cuda-image-processing"
version = "0.1.0"
description = "CUDA-accelerated traffic analytics pipeline with lane detection, optional YOLO objects, and CPU/GPU benchmarks."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "opencv-python>=4.8",
  "matplotlib>=3.8",
]

[project.optional-dependencies]
gpu = [
  "numba>=0.60",
]
traffic = [
  "torch>=1.9",
  "torchvision>=0.10",
  "ultralytics>=8.0",
]
all = [
  "numba>=0.60",
  "torch>=1.9",
  "torchvision>=0.10",
  "ultralytics>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
